[package]
name = "kyushu"
description = "kyushu is a local-first, event-based journaling application."
version = "0.18.0"
edition = "2021"
authors = ["Amir Alesheikh <amirhossein.alehseikh@gmail.com>"]

homepage = "https://github.com/amirography/soapberry/tree/main/crates/kyushu"
repository = "https://github.com/amirography/soapberry/tree/main/crates/kyushu"
license = "MPL-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["journaling", "events"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kyushu"


[package.metadata.git-cliff.git]
conventional_commits = true
split_commits = true
filter_unconventional = true

[dependencies]
clap = { version = "4.3.19", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
once_cell = "1.18.0"
owo-colors = "3.5.0"
redmaple = { version = "0.18.1", path = "../redmaple" }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
time = { version = "0.3.23", features = [
  "serde",
  "formatting",
  "local-offset",
  "serde-human-readable",
] }
whirlybird = { version = "0.13.3", path = "../whirlybird", features = [
  "journey",
], default-features = false }
