[package]
name = "redmaple"
version = "0.12.3"
edition = "2021"
authors = ["Amir Alesheikh <amirhossein.alehseikh@gmail.com>"]
description = "RedMaple offers an oppinionated yet extremely flexible data modeling system based on events for backend applications"
homepage = "https://github.com/amirography/soapberry/tree/main/crates/redmaple"
repository = "https://github.com/amirography/soapberry/tree/main/crates/redmaple"
license = "MPL-2.0"
categories = ["data-structures"]
keywords = ["data_model", "event-sourcing", "events"]
readme = "README.md"

[package.metadata.git-cliff.git]
conventional_commits = true
split_commits = true
filter_unconventional = true

[dependencies]
uuid = { version = "1.3.3", features = ["v4"] }

[dev-dependencies]
thiserror = "1.0.40"
