[package]
name = "whirlybird"
version = "0.8.1"
edition = "2021"
authors = ["Amir Alesheikh <amirhossein.alehseikh@gmail.com>"]
description = "whirlybird is a library of generic type implementations for RedMaple library, that offers workflows for different events compatible with common contents like todos, blogs and etc."
homepage = "https://github.com/amirography/soapberry/tree/main/crates/whirlybird"
repository = "https://github.com/amirography/soapberry/tree/main/crates/whirlybird"
license = "MPL-2.0"
categories = ["data-structures"]
keywords = ["data_model", "event-sourcing", "events"]
readme = "README.md"

[features]
default = ["journey", "argument"]
journey = []
argument = []
all = ["journey", "argument"]


[package.metadata.git-cliff.git]
conventional_commits = true
split_commits = true
filter_unconventional = true

[dependencies]
redmaple = { version = "0.12.1", path = "../redmaple"}
thiserror = {version="1.0.40"}

[dev-dependencies]
uuid = { version = "1.3.3", features = ["v4"] }
