[package]
name = "whirlybird"
version = "0.13.3"
edition = "2021"
authors = ["Amir Alesheikh <amirhossein.alehseikh@gmail.com>"]
description = "whirlybird is a library of generic type implementations for RedMaple library, that offers workflows for different events compatible with common contents like todos, blogs and etc."
homepage = "https://github.com/prmadev/soapberry/tree/main/crates/whirlybird"
repository = "https://github.com/prmadev/soapberry/tree/main/crates/whirlybird"
license = "MPL-2.0"
categories = ["data-structures"]
keywords = ["data_model", "event-sourcing", "events"]
readme = "README.md"

[features]
default = ["journey"]
journey = []
all = ["journey"]


[package.metadata.git-cliff.git]
conventional_commits = true
split_commits = true
filter_unconventional = true

[dependencies]
redmaple = { version = "0.18.1", path = "../redmaple" }
serde = { version = "1.0.174", features = ["derive"] }
thiserror = { version = "1.0.44" }
time = { version = "0.3.23", features = ["serde"] }
